--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/css/lp_humidifier_2/dexter_menu_lite.css">
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp.css">
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp2.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/lp3.css">
 
 
 
@@ -97,6 +98,13 @@
                     <img class="img_lp2" src="/img/humidifier2/dbpic.php?i=office" alt="Humidifier - пара">
                 </p>
 
+
+                <p class="ac"><span class="t_und"><b>В атомобиле:</b></span> особенно в зимний период, когда включены системы отопления</p>
+                <p class="ac">
+                    <img class="img_lp2" src="/img/humidifier2/dbpic.php?i=xxx" alt="Humidifier - пара">
+                </p>
+                <p><strong>Увлажнитель Humidifier</strong> абсолютно бесшумный, кабель USB позволяет подключить его в любом удобном для вас месте (USB, ноутбук, Power Bank, розетка или прикуриватель в автомобиле), а благодаря оригинальной LED подсветке (7 цветов), его можно использовать в комнате как ночник.</p>
+
             </section>
         </div><div class="cl"></div>
     </div><div class="cl"></div>
@@ -105,32 +113,35 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!--третья часть-->
 <div id="preimushestva" class="min_h fon2">
     <div class="maxw fon_pad">
         <section>
+            <h3 class="ac">Простота использования</h3>
+
+
             3333333333333
         </section>
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--четвёртая часть-->
 <div id="to-use" class="min_h fon rel">
     <div class="land_fon_c rel">
