--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp.css">
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp2.css">
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp3.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/lp4.css">
 
 
 
@@ -110,17 +111,19 @@
     </div><div class="cl"></div>
 </div>
 
-
-
-
 <!--третья часть-->
 <div id="preimushestva" class="min_h fon2">
     <div class="maxw fon_pad">
         <section>
             <h3 class="ac">Простота использования</h3>
+<ul class="item">
+    <li><span class="check"></span>Перед тем как применять устройство, наполните резервуар чистой воды.</li>
+    <li><span class="check"></span>Подключить увлажнитель к питанию (USB, ноутбук, Power Bank, розетка или прикуриватель в автомобиле)</li>
+    <li><span class="check"></span>Если растворить в воде пару капель ароматического масла, то в добавок к увлажнению вы получите приятные для себя ароматы (важно использовать только растворимые в воде масла)</li>
+    <li><span class="check"></span>Вода должна быть очищенной. Когда вода заканчивается, увлажнитель автоматически отключается.</li>
+    <li><span class="check"></span>При соблюдении этих условий, увлажнитель воздуха повысит комфорт в комнате, офисе, либо салоне автомобиля.</li>
+    </ul>
 
-
-            3333333333333
         </section>
     </div>
 </div>
@@ -146,10 +149,43 @@
 <div id="to-use" class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
-            44444444444
+           <section>
+
+               <div class="land_fon_c_l rel">
+                   <div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="7000" data-keyboard="true" >
+                       <img src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара"><img src="/img/humidifier/dbpic.php?i=humidifier-main" alt="Humidifier - презентация"><img src="/img/humidifier/dbpic.php?i=humidifier-avto" alt="Humidifier - авто"><img src="/img/humidifier/dbpic.php?i=humidifier-fon" alt="Humidifier - фон"><img src="/img/humidifier/dbpic.php?i=humidifier-blue" alt="Humidifier - голубой"><img src="/img/humidifier/dbpic.php?i=humidifier-pink" alt="Humidifier - розовый"><img src="/img/humidifier/dbpic.php?i=humidifier-white" alt="Humidifier - белый"><img src="/img/humidifier/dbpic.php?i=humidifier-home" alt="Humidifier - дом"><img src="/img/humidifier/dbpic.php?i=humidifier-office" alt="Humidifier - офис"><img src="/img/humidifier/dbpic.php?i=humidifier-packaging" alt="Humidifier - офис"><img src="/img/humidifier/dbpic.php?i=humidifier-details" alt="Humidifier - деталировка"><img src="/img/humidifier/dbpic.php?i=humidifier-econom" alt="Humidifier - эконом">
+                       <a href="https://youtu.be/2UCxDNoc2GA"></a>
+                   </div>
+               </div>
+               <div class="land_fon_c_r rel">
+                   <h3 class="pulse">Humidifier - ультразвуковой увлажнитель воздуха</h3>
+                   <div class="rel"></div>
+                   <div class="land_price bounceInRight">349 грн  <span class="land_price_old">560 грн</span></div>
+                   <div>
+                       <div id="land_btn_buy" class="land_btn_buy ac bounceInUp">Заказать</div><script>document.getElementById("land_btn_buy").addEventListener("click",function(){location.href="#order-buy";},false);</script>
+                       <p class="bounceInRight">Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.</p>
+                       <p>Увлажнитель Humidifier абсолютно безшумный, кабель USB позволяет подключить его в любом удобном для вас месте, а благодаря оригинальной LED подсветке (7 цветов), его можно использовать в комнате как ночник.</p>
+                       <h4>Технические характеристики</h4>
+                       <ul class="item bounceInLeft">
+                           <li><span class="check"></span>Обьем резервуара: 300мл;</li>
+                           <li><span class="check"></span>Скорость испарения жидкости: 30-50 мл.час;</li>
+                           <li><span class="check"></span>Время беспрерывной работы 6-8 часов;</li>
+                           <li><span class="check"></span>Мощность: 1.0-2.5 Вт;</li>
+                           <li><span class="check"></span>Рабочее напряжение: 12V;</li>
+                           <li><span class="check"></span>Размер: 70*70*153 мм;</li>
+                           <li><span class="check"></span>Материал: АБС пластик, электронные компоненты;</li>
+                           <li><span class="check"></span>Шум: 30 Дб (абсолютно безшумный);</li>
+                           <li><span class="check"></span>Вес упаковки: 198 грамма;</li>
+                           <li><span class="check"></span>Цвет: белый, розовый, бирюзовый!</li>
+                       </ul>
+                       <div class="cl"></div>
+                   </div>
+               </div>
+
+           </section>
         </div><div class="cl"></div>
     </div><div class="cl"></div>
-</div>
+</div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
 <!--пятая часть-->
 <div id="primenenie" class="min_h fon2">
     <div class="maxw">
