--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp2.css">
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp3.css">
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp4.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/lp5video.css">
 
 
 
@@ -129,22 +130,6 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!--четвёртая часть-->
 <div id="to-use" class="min_h fon rel">
     <div class="land_fon_c rel">
@@ -186,22 +171,61 @@
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
+
+
 <!--пятая часть-->
 <div id="primenenie" class="min_h fon2">
-    <div class="maxw">
-        555555555555
+    <div class="maxw fon_pad">
+        <section>
+            <h3 class="ac">Видео о увлажнителе Humidifier</h3>
+            <div id="hum_video">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/2UCxDNoc2GA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
     </div>
     <div class="cl five five_"></div>
 </div>
+
+
+
 <!--шестая часть-->
-<div id="order-buy" class="min_h fon rel">
+<div class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
+            <section>
+                <h3 class="ac">Оптимальное решение для ВАС</h3>
+                <p>Сухой воздух – довольно частая проблема для помещений, будь то комната, офис или салон автомобиля, особенно во время отопительного сезона, когда многочисленные приборы отопления максимально высушивают воздух, что неблагоприятно отражается на здоровье человека и является причиной целого ряда заболеваний.</p>
+                <p>С этим небольшим и недорогим устройством ваша жизнь станет намного комфортнее!</p>
+                <ul class="item">
+                    <li><span class="check"></span>Сохраняет микроклимат</li>
+                    <li><span class="check"></span>Улучшает сон ребёнка, а соответственно и родителей</li>
+                    <li><span class="check"></span>Применяется как ароматизатор</li>
+                    <li><span class="check"></span>Приятная подсветка, даёт возможность использовать его в качестве ночника</li>
+                    <li><span class="check"></span>В режиме освежителя снимает психологическое напряжение</li>
+                    <li><span class="check"></span>Маленький размер и компактность обеспечивают удобство хранения</li>
+                    <li><span class="check"></span>Оригинальный форма и дизайн, впишется под любой дизайн помещения.</li>
+                </ul>
+                <p>Ультразвуковой увлажнитель Humidifier - просто необходим в каждом доме, особенно если в нём есть ребенок, он поможет создать оптимальный микроклимат и обеспечит необходимую влажность в помещении (особенно в отопительный сезон), благодаря чему улучшается сон малыша и взрослых, легко и быстро освежает, увлажняет кожу, создаёт микроклимат в вашем доме, автомобиле или в офисе. Благодаря своим компактным размерам, вы можете брать его с собой на работу, использовать в автомобиле при дальних поездках, как всем известно, духота в автомобиле ведет к потере внимания и апатичности, ведь недостатки систем вентиляции современных автомобилей в том, что они нарушают электрический баланс свежего воздуха, которым они снабжают салон, увлажнитель Humidifier с лёгкостью решит эту проблему.</p>
+            </section>
 
-66666666666666666666
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
+
+
+
+
+<!--7 часть-->
+<div class="min_h fon2 rel">
+    <div class="land_fon_c rel">
+        <div class="maxw rel">
+
+            7777777777777777
+        </div><div class="cl"></div>
+    </div><div class="cl"></div>
+</div>
+
+
 
 
 <div id="pulseBtn" class="pulse_btn"><div><div class="pulse_btn_phone"><i class="fa fa-phone" aria-hidden="true"></i><span class="grey"></span></div><div class="pulse_btn_text">Кнопка связи</div></div></div><link rel="stylesheet" href="/css/lp_humidifier/pulse_btn.php"><link href="/css/fotorama.php" rel="stylesheet"><div id="bf"><div id="up"> ^ Наверх</div></div></body></html>
