--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -113,7 +113,7 @@
 </div>
 
 <!--третья часть-->
-<div id="preimushestva" class="min_h fon2">
+<div class="min_h fon2">
     <div class="maxw fon_pad">
         <section>
             <h3 class="ac">Простота использования</h3>
@@ -131,7 +131,7 @@
 
 
 <!--четвёртая часть-->
-<div id="to-use" class="min_h fon rel">
+<div class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
            <section>
@@ -174,7 +174,7 @@
 
 
 <!--пятая часть-->
-<div id="primenenie" class="min_h fon2">
+<div class="min_h fon2">
     <div class="maxw fon_pad">
         <section>
             <h3 class="ac">Видео о увлажнителе Humidifier</h3>
