--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -14,8 +14,8 @@
     <title>Humidifier - ультразвуковой увлажнитель воздуха</title>
     <meta name="description"
           content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
-    <script async src="/js/common.php"></script>
-    <script async src="/js/call_back.php"></script>
+    <!--<script async src="/js/common.php"></script>
+    <script async src="/js/call_back.php"></script>-->
 
 
     <link rel="stylesheet" href="/css/lp_humidifier_2/default.css">
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp4.css">
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp5video.css">
 
+    <link rel="stylesheet" href="/css/lp_humidifier_2/lp7.css">
+
 
 
 
@@ -35,8 +37,8 @@
 
 <!--    <script src="/js/wow.php"></script>
     <script>new WOW().init();</script>-->
-    <script async src="/js/scroll_only.php"></script>
-    <script async src="/js/lp_humidifier.php"></script>
+    <!--<script async src="/js/scroll_only.php"></script>
+    <script async src="/js/lp_humidifier.php"></script>-->
 </head>
 <body>
 <div class="min_h first_d rel">
@@ -170,7 +172,7 @@
            </section>
         </div><div class="cl"></div>
     </div><div class="cl"></div>
-</div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
+</div><!--<script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>-->
 
 
 <!--пятая часть-->
@@ -216,15 +218,79 @@
 
 
 <!--7 часть-->
-<div class="min_h fon2 rel">
+<div id="order-buy" class="min_h fon2 rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
-
-            7777777777777777
+            <div id="land-fast-order" class="five"></div>
+            <section><h2 class="ac bounceInDown">Сделать заказать по акции:</h2>
+                <form id="land_form_fast_buy" class="land_form_fast_buy">
+                    <div class="rel">
+                        <input id="formFastFIOLand" name="username" type="text" size="33" title="Введите Ваше имя" placeholder="Фамилия и Имя *" required="">
+                    </div>
+                    <div class="rel">
+                        <input id="formFastTelLand" name="tel" type="text" size="13" title="Введите номер телефона" placeholder="Номер телефона *" required="">
+                    </div>
+                    <div class="rel">
+                        <input id="formFastTownLand" name="town" type="text" size="13" title="Введите Ваш город" placeholder="Город">
+                    </div>
+                    <div class="rel">
+                        <input id="formFastNPostLand" name="n_post" type="number" min="1" title="Введите номер Новой почты" placeholder="Номер отделения новой почты">
+                    </div>
+                    <div class="rel">
+                        <select id="formFastColorLand" class="rel" onchange="this.style.color='black'">
+                            <option value="">Выбрать цвет</option>
+                            <option value="white-Humidifier">Белый</option>
+                            <option value="pink-Humidifier">Розовый</option>
+                            <option value="turquoise-Humidifier">Бирюзовый</option>
+                        </select>
+                    </div>
+                    <div class="rel"><input id="formFastBuySubmitLand" class="bounceInUp" type="submit" value="Заказать"></div>
+                </form>
+            </section>
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
 
+
+
+<!--8 часть-->
+<div id="preimushestva" class="min_h fon">
+    <div class="maxw land_benefits">
+        <section>
+            <div class="ac land_benefits_caption">
+                <h3>Наши преимущества</h3>
+                <p>В нашей компании вы получаете не только 100% качественный товар, но и индивидуальный подход к каждому клиенту!</p>
+            </div>
+            <div class="land_benefits_border cl"><br></div>
+            <div class="dwfte">
+                <div class="land_benefits_box five rollIn">
+                    <span class="land_pay_i fl"></span>
+                    <span><h4>Способы оплаты</h4><p>При получении на почте или на карту ПриватБанка</p></span>
+                    <div class="cl"></div>
+                </div>
+                <div class="land_benefits_box five lightSpeedIn">
+                    <span class="land_quality_i fl"></span>
+                    <span><h4>Гарантия качества</h4><p>Возврат и обмен в течении 14 дней согласно закона</p></span>
+                    <div class="cl"></div>
+                </div>
+            </div>
+            <div class="land_benefits_border cl"></div>
+            <div class="dwfte">
+                <div class="land_benefits_box five rollIn">
+                    <span class="land_delivery_i fl"></span>
+                    <span><h4>Быстрая доставка</h4><p>Получите свой заказ в течении 1-2 дней с момента заказа</p></span>
+                    <div class="cl"></div>
+                </div>
+                <div class="land_benefits_box five lightSpeedIn">
+                    <span class="land_price_i fl"></span>
+                    <span><h4>Доступные цены</h4><p>Вы можете приобрести ультразвуковой увлажнитель воздуха всего за 349 грн</p></span>
+                    <div class="cl"></div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="cl five five_"></div>
+</div>
 
 
 
