Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -14,8 +14,8 @@
     <title>Humidifier - ультразвуковой увлажнитель воздуха</title>
     <meta name="description"
           content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
-    <!--<script async src="/js/common.php"></script>
-    <script async src="/js/call_back.php"></script>-->
+    <script async src="/js/common.php"></script>
+    <script async src="/js/call_back.php"></script>
 
 
     <link rel="stylesheet" href="/css/lp_humidifier_2/default.css">
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp5video.css">
 
     <link rel="stylesheet" href="/css/lp_humidifier_2/lp7.css">
+    <link rel="stylesheet" href="/css/lp_humidifier_2/lp8.css">
 
 
 
@@ -37,8 +38,8 @@
 
 <!--    <script src="/js/wow.php"></script>
     <script>new WOW().init();</script>-->
-    <!--<script async src="/js/scroll_only.php"></script>
-    <script async src="/js/lp_humidifier.php"></script>-->
+    <script async src="/js/scroll_only.php"></script>
+    <script async src="/js/lp_humidifier.php"></script>
 </head>
 <body>
 <div class="min_h first_d rel">
@@ -90,25 +91,20 @@
 
                 <p class="ac"><span class="t_und"><b>В спальне:</b></span> благоприятный сон залог крепкого здоровья</p>
                 <p class="ac"><img class="img_lp2" src="/img/humidifier/dbpic.php?i=humidifier-home" alt="Humidifier - дом"></p>
-
                 <p class="ac"><span class="t_und"><b>Детская комната:</b></span> самое главное, здоровья наших малышей</p>
                 <p class="ac">
-                <img class="img_lp2" src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара">
-                </p>
-
-
+                <img class="img_lp2" src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара"></p>
                 <p class="ac"><span class="t_und"><b>В офисе:</b></span> создай комфортные условия на рабочем месте</p>
                 <p class="ac">
-                    <img class="img_lp2" src="/img/humidifier2/dbpic.php?i=office" alt="Humidifier - пара">
-                </p>
-
-
+                    <img class="img_lp2" src="/img/humidifier2/dbpic.php?i=office" alt="Humidifier - пара"></p>
                 <p class="ac"><span class="t_und"><b>В атомобиле:</b></span> особенно в зимний период, когда включены системы отопления</p>
                 <p class="ac">
-                    <img class="img_lp2" src="/img/humidifier2/dbpic.php?i=xxx" alt="Humidifier - пара">
+                    <img class="img_lp2" src="/img/humidifier/dbpic.php?i=humidifier-avto" alt="Humidifier - авто">
                 </p>
                 <p><strong>Увлажнитель Humidifier</strong> абсолютно бесшумный, кабель USB позволяет подключить его в любом удобном для вас месте (USB, ноутбук, Power Bank, розетка или прикуриватель в автомобиле), а благодаря оригинальной LED подсветке (7 цветов), его можно использовать в комнате как ночник.</p>
-
+                <p class="ac">
+                    <img class="img_lp2" src="/img/humidifier/dbpic.php?i=humidifier-main" alt="Humidifier - презентация">
+                </p>
             </section>
         </div><div class="cl"></div>
     </div><div class="cl"></div>
@@ -140,7 +136,11 @@
 
                <div class="land_fon_c_l rel">
                    <div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="7000" data-keyboard="true" >
-                       <img src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара"><img src="/img/humidifier/dbpic.php?i=humidifier-main" alt="Humidifier - презентация"><img src="/img/humidifier/dbpic.php?i=humidifier-avto" alt="Humidifier - авто"><img src="/img/humidifier/dbpic.php?i=humidifier-fon" alt="Humidifier - фон"><img src="/img/humidifier/dbpic.php?i=humidifier-blue" alt="Humidifier - голубой"><img src="/img/humidifier/dbpic.php?i=humidifier-pink" alt="Humidifier - розовый"><img src="/img/humidifier/dbpic.php?i=humidifier-white" alt="Humidifier - белый"><img src="/img/humidifier/dbpic.php?i=humidifier-home" alt="Humidifier - дом"><img src="/img/humidifier/dbpic.php?i=humidifier-office" alt="Humidifier - офис"><img src="/img/humidifier/dbpic.php?i=humidifier-packaging" alt="Humidifier - офис"><img src="/img/humidifier/dbpic.php?i=humidifier-details" alt="Humidifier - деталировка"><img src="/img/humidifier/dbpic.php?i=humidifier-econom" alt="Humidifier - эконом">
+                       <img src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара">
+<img src="/img/humidifier/dbpic.php?i=humidifier-main" alt="Humidifier - презентация">
+<img src="/img/humidifier/dbpic.php?i=humidifier-avto" alt="Humidifier - авто">
+<img src="/img/humidifier/dbpic.php?i=humidifier-fon" alt="Humidifier - фон"><img src="/img/humidifier/dbpic.php?i=humidifier-blue" alt="Humidifier - голубой"><img src="/img/humidifier/dbpic.php?i=humidifier-pink" alt="Humidifier - розовый"><img src="/img/humidifier/dbpic.php?i=humidifier-white" alt="Humidifier - белый"><img src="/img/humidifier/dbpic.php?i=humidifier-home" alt="Humidifier - дом"><img src="/img/humidifier/dbpic.php?i=humidifier-office" alt="Humidifier - офис">
+<img src="/img/humidifier/dbpic.php?i=humidifier-packaging" alt="Humidifier - офис"><img src="/img/humidifier/dbpic.php?i=humidifier-details" alt="Humidifier - деталировка"><img src="/img/humidifier/dbpic.php?i=humidifier-econom" alt="Humidifier - эконом">
                        <a href="https://youtu.be/2UCxDNoc2GA"></a>
                    </div>
                </div>
@@ -172,7 +172,7 @@
            </section>
         </div><div class="cl"></div>
     </div><div class="cl"></div>
-</div><!--<script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>-->
+</div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
 
 
 <!--пятая часть-->
