Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="dexter-line first"></div><div class="dexter-line second"></div><div class="dexter-line third"></div><div class="dexter-line fourth"></div>
                     <nav class="dexter-main-menu">
-                        <a href="/">Главная</a>
+                        <a href="#vibor">Главная</a>
                         <a href="#zakazat">Заказать</a>
                         <a href="#preimushestva">Преимущества</a>
                         <a href="#to-use">Инструкция</a>
