Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.smoke.my/humidifier.html
+++ b/www.smoke.my/humidifier.html
@@ -1,47 +1,24 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index,follow">
-
-    <meta property="og:image" content="/img/humidifier/meta.jpg">
+<!DOCTYPE html><html lang="ru"><head><link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="robots" content="index,follow">
+    <meta property="og:image" content="/img/humidifier2/humidifier_meta2.jpg">
     <meta property="og:title" content="Humidifier - ультразвуковой увлажнитель воздуха">
     <meta property="og:description" content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
-
-
     <title>Humidifier - ультразвуковой увлажнитель воздуха</title>
-    <meta name="description"
-          content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
-    <script async src="/js/common.php"></script>
-    <script async src="/js/call_back.php"></script>
-
-
-    <link rel="stylesheet" href="/css/lp_humidifier_2/default.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/common.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/dexter_menu_lite.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/lp.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/lp2.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/lp3.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/lp4.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/lp5video.css">
-
-    <link rel="stylesheet" href="/css/lp_humidifier_2/lp7.css">
-    <link rel="stylesheet" href="/css/lp_humidifier_2/lp8.css">
-
-
-
-
-
-
-
-<!--    <script src="/js/wow.php"></script>
-    <script>new WOW().init();</script>-->
-    <script async src="/js/scroll_only.php"></script>
-    <script async src="/js/lp_humidifier.php"></script>
-</head>
-<body>
+    <meta name="description" content="Увлажнитель воздуха HUMIDIFIER – отличный выбор в сегменте портативных мини-увлажнителей воздуха и ароматизаторов с лаконичным дизайном и достойным функционалом.">
+    <script async src="/js/common.php"></script><script async src="/js/call_back.php"></script><script async src="/js/scroll_only.php"></script><script async src="/js/lp_humidifier.php"></script><link rel="stylesheet" href="/css/lp_humidifier_2/body.php">
+</head><body><!--Facebook Pixel-->
+<script>!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+        n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t,s)}(window,document,'script',
+        'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2534848886552351');
+    fbq('track', 'PageView');
+    fbq('track', 'ViewContent');
+    fbq('track', 'Purchase');</script>
+<noscript><img height="1" width="1" src="https://www.facebook.com/tr?id=2534848886552351&ev=PageView
+&noscript=1"></noscript><!--End Facebook Pixel-->
 <div class="min_h first_d rel">
     <div class="rel">
         <div class="maxw rel">
@@ -55,11 +32,11 @@
                     </div>
                     <div class="dexter-line first"></div><div class="dexter-line second"></div><div class="dexter-line third"></div><div class="dexter-line fourth"></div>
                     <nav class="dexter-main-menu">
-                        <a href="#vibor">Главная</a>
+                        <a href="#vibor">Выбор</a>
+                        <a href="#harakteristiki">Характеристики</a>
+                        <a href="#obzor">Обзор</a>
+                        <a href="#dostoinstva">Достоинства</a>
                         <a href="#zakazat">Заказать</a>
-                        <a href="#preimushestva">Преимущества</a>
-                        <a href="#to-use">Инструкция</a>
-                        <a href="#primenenie">Применение</a>
                     </nav>
                 </div>
             </nav>
@@ -79,14 +56,12 @@
         </div>
     </div><div class="cl"></div>
 </div>
-
 <!--вторая часть-->
-<div class="min_h fon rel">
+<div id="vibor" class="min_h fon rel">
     <div class="fon_pad rel">
         <div class="maxw rel">
             <section>
                 <h3 class="ac h3lp2">Отличный выбор</h3>
-
                 <p>Увлажнитель воздуха <strong>HUMIDIFIER</strong> – отличный выбор для тех, кто заботится о своём здоровье и здоровье своих близких. Это идеальное решение для создания благоприятного микроклимата в детской комнате, спальне, офисе либо автомобиле.</p><p>Оригинальный дизайн, небольшой размер, бесшумная работа гаджета, приятная подсветка будет дополнять приятную атмосферу в любом помещении.</p>
 
                 <p class="ac"><span class="t_und"><b>В спальне:</b></span> благоприятный сон залог крепкого здоровья</p>
@@ -109,7 +84,6 @@
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
-
 <!--третья часть-->
 <div class="min_h fon2">
     <div class="maxw fon_pad">
@@ -126,14 +100,11 @@
         </section>
     </div>
 </div>
-
-
 <!--четвёртая часть-->
-<div class="min_h fon rel">
+<div id="harakteristiki" class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
            <section>
-
                <div class="land_fon_c_l rel">
                    <div class="fotorama" data-allowfullscreen="native" data-nav="thumbs" data-transition="crossfade" data-loop="true" data-autoplay="7000" data-keyboard="true" >
                        <img src="/img/humidifier/dbpic.php?i=humidifier-two" alt="Humidifier - пара">
@@ -173,10 +144,8 @@
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div><script src="/js/jq.php"></script><script src="/js/fotorama.php"></script>
-
-
 <!--пятая часть-->
-<div class="min_h fon2">
+<div id="obzor" class="min_h fon2">
     <div class="maxw fon_pad">
         <section>
             <h3 class="ac">Видео о увлажнителе Humidifier</h3>
@@ -187,11 +156,8 @@
     </div>
     <div class="cl five five_"></div>
 </div>
-
-
-
 <!--шестая часть-->
-<div class="min_h fon rel">
+<div id="dostoinstva" class="min_h fon rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
             <section>
@@ -209,16 +175,11 @@
                 </ul>
                 <p>Ультразвуковой увлажнитель Humidifier - просто необходим в каждом доме, особенно если в нём есть ребенок, он поможет создать оптимальный микроклимат и обеспечит необходимую влажность в помещении (особенно в отопительный сезон), благодаря чему улучшается сон малыша и взрослых, легко и быстро освежает, увлажняет кожу, создаёт микроклимат в вашем доме, автомобиле или в офисе. Благодаря своим компактным размерам, вы можете брать его с собой на работу, использовать в автомобиле при дальних поездках, как всем известно, духота в автомобиле ведет к потере внимания и апатичности, ведь недостатки систем вентиляции современных автомобилей в том, что они нарушают электрический баланс свежего воздуха, которым они снабжают салон, увлажнитель Humidifier с лёгкостью решит эту проблему.</p>
             </section>
-
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
-
-
-
-
 <!--7 часть-->
-<div id="order-buy" class="min_h fon2 rel">
+<div id="zakazat" class="min_h fon2 rel">
     <div class="land_fon_c rel">
         <div class="maxw rel">
             <div id="land-fast-order" class="five"></div>
@@ -250,11 +211,8 @@
         </div><div class="cl"></div>
     </div><div class="cl"></div>
 </div>
-
-
-
 <!--8 часть-->
-<div id="preimushestva" class="min_h fon">
+<div class="min_h fon">
     <div class="maxw land_benefits">
         <section>
             <div class="ac land_benefits_caption">
@@ -291,7 +249,4 @@
     </div>
     <div class="cl five five_"></div>
 </div>
-
-
-
 <div id="pulseBtn" class="pulse_btn"><div><div class="pulse_btn_phone"><i class="fa fa-phone" aria-hidden="true"></i><span class="grey"></span></div><div class="pulse_btn_text">Кнопка связи</div></div></div><link rel="stylesheet" href="/css/lp_humidifier/pulse_btn.php"><link href="/css/fotorama.php" rel="stylesheet"><div id="bf"><div id="up"> ^ Наверх</div></div></body></html>
