--- a/www.ok.my/index.html
+++ b/www.ok.my/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -15,7 +14,13 @@
 <div class="header">
     <div id="headcontact">
         <div class="maxw rel">
-            456
+            <div id="logo">
+                <img src="img/logo.png" alt="Logo">
+            </div>
+
+            <div class="cl"></div>
+
+
         </div>
     </div>
 </div>
