Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.ok.my/index.html
+++ b/www.ok.my/index.html
@@ -15,9 +15,17 @@
     <div id="headcontact">
         <div class="maxw rel">
             <div id="logo">
-                <img src="img/logo.png" alt="Logo">
-            </div>
+                <div id="logo_vint_out">
+                    <img src="img/Ok-vint-out.png">
+                    <div id="logo_vint_in">
 
+                        <img src="img/Ok-vint-in.png">
+                    </div>
+                </div>
+
+
+            </div>
+            <!--<img src="img/logo.png" alt="Logo">-->
             <div class="cl"></div>
 
 
