--- a/www.ok.my/index.html
+++ b/www.ok.my/index.html
@@ -15,14 +15,14 @@
     <div id="headcontact">
         <div class="maxw rel">
             <div id="logo">
-                <div id="logo_vint_out">
-                    <img src="img/Ok-vint-out.png">
+                <div id="logo_vint_out" class="fl">
+                    <img src="img/Ok-vint-out_.png">
                     <div id="logo_vint_in">
-
                         <img src="img/Ok-vint-in.png">
                     </div>
                 </div>
 
+                <div class="cl"></div>
 
             </div>
             <!--<img src="img/logo.png" alt="Logo">-->
