--- a/www.bc.my/index.html
+++ b/www.bc.my/index.html
@@ -6,11 +6,17 @@
 
     <link rel="stylesheet" type="text/css" href="/default.css">
     <link rel="stylesheet" type="text/css" href="/common.css">
-    <link rel="stylesheet" type="text/css" href="/frame.css">
+    <link rel="stylesheet" type="text/css" href="/part1.css">
 
     <title>Title</title>
 </head>
 <body>
+
+<!-- 1 первая часть -->
+<div id="part1" class="maxw">
+    <div id="logo"></div>
+
+</div>
 
 </body>
 </html>
