--- a/www.bc.my/index.html
+++ b/www.bc.my/index.html
@@ -18,5 +18,77 @@
 
 </div>
 
+
+<div><!--onClick="AddBasketBtn(this);"-->
+
+    <span data-id="1" data-price="1500.12" >009988<br><br>
+        <div onClick="minusBasket(this);">---</div><br><br>
+        <div id="pos1">1</div><br><br>
+        <div onClick="plusBasket(this);">+++</div><br><br>
+    </span><br><br>
+    <span data-id="9988" data-price="1200.12" onClick="AddBasketBtn(this);">009988</span><br><br>
+
+    <span onClick="testBasket();">Test Basket</span>
+
+
+
+</div>
+<span id="lng_uk_btn" class="lng_uk" title="українська" data-lng="uk" onClick="AddBasketBtn(this);"></span>
+<script type="application/javascript">
+    var Basket={};
+    function AddBasketBtn(el){
+        //alert(el.dataset.id);
+
+        Basket[el.dataset.id]=el.dataset.price;
+
+        alert(Basket[el.dataset.id]);
+        //document.cookie="lng="+el.dataset.lng+";domain=."+document.location.host;
+        //location.href='/';
+    }
+
+    function plusBasket(el) {
+        var id = el.parentNode.dataset.id;
+        var takeId = "pos" + id;
+
+        if( Basket[id] === undefined){
+            Basket[id] = {price:el.parentNode.dataset.price};
+            Basket[id].kol_vo=1;
+        }else{
+            var kol_vo=Basket[id].kol_vo;
+            kol_vo++;
+            Basket[id].kol_vo=kol_vo;
+        }
+        //Temp str
+        document.getElementById(takeId).innerText ="Id " +id + " Цена " + Basket[id].price + "  lo-vo  " + Basket[id].kol_vo;
+
+        var JSON_basket = JSON.stringify(Basket); //сериализуем его
+
+        localStorage.setItem("basket",JSON_basket);
+
+        var returnObj = JSON.parse(localStorage.getItem(Basket)); //спарсим его обратно объект
+
+
+        alert(returnObj[0].kol_vo);
+        //console.log(Object.values(returnObj));
+        //console.log(returnObj);
+
+    }
+
+    function minusBasket(el){
+
+        var id=el.parentNode.dataset.id;
+        var kol_vo=el.parentNode.dataset.id;
+
+
+        alert(el.parentNode.dataset.id);
+
+
+    }
+
+    function testBasket() {
+        alert(Basket[9988]);
+    }
+</script>
+
 </body>
 </html>
