--- a/www.bc.my/index.html
+++ b/www.bc.my/index.html
@@ -26,7 +26,13 @@
         <div id="pos1">1</div><br><br>
         <div onClick="plusBasket(this);">+++</div><br><br>
     </span><br><br>
-    <span data-id="9988" data-price="1200.12" onClick="AddBasketBtn(this);">009988</span><br><br>
+    <span data-id="2" data-price="300.20" >009988<br><br>
+        <div onClick="minusBasket(this);">---</div><br><br>
+        <div id="pos2">1</div><br><br>
+        <div onClick="plusBasket(this);">+++</div><br><br>
+    </span><br><br>
+
+
 
     <span onClick="testBasket();">Test Basket</span>
 
@@ -65,24 +71,34 @@
 
         localStorage.setItem("basket",JSON_basket);
 
-        var returnObj = JSON.parse(localStorage.getItem(Basket)); //спарсим его обратно объект
+        var returnObj = JSON.parse(localStorage.getItem("basket")); //спарсим его обратно объект
 
-
-        alert(returnObj[0].kol_vo);
-        //console.log(Object.values(returnObj));
-        //console.log(returnObj);
-
+        //alert(returnObj[1].kol_vo);
     }
 
     function minusBasket(el){
 
-        var id=el.parentNode.dataset.id;
-        var kol_vo=el.parentNode.dataset.id;
+        var id = el.parentNode.dataset.id;
+        var takeId = "pos" + id;
 
+        if( Basket[id] === undefined || Basket[id].kol_vo<2){
+            Basket[id] = {price:el.parentNode.dataset.price};
+            Basket[id].kol_vo=1;
+        }else{
+            var kol_vo=Basket[id].kol_vo;
+            kol_vo--;
+            Basket[id].kol_vo=kol_vo;
+        }
+        //Temp str
+        document.getElementById(takeId).innerText ="Id " +id + " Цена " + Basket[id].price + "  lo-vo  " + Basket[id].kol_vo;
 
-        alert(el.parentNode.dataset.id);
+        var JSON_basket = JSON.stringify(Basket); //сериализуем его
 
+        localStorage.setItem("basket",JSON_basket);
 
+        var returnObj = JSON.parse(localStorage.getItem("basket")); //спарсим его обратно объект
+
+        //alert(returnObj[1].kol_vo);
     }
 
     function testBasket() {
