--- a/www.bc.my/index.html
+++ b/www.bc.my/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="/common.css">
     <link rel="stylesheet" type="text/css" href="/part1.css">
 
+    <script src="basket.js"></script>
+
     <title>Title</title>
 </head>
 <body>
@@ -18,7 +20,23 @@
 
 </div>
 
+<div id="pos3">
+    <button onclick="">Уменьшить ---</button><br><br><button onclick="">Добавить в корзину</button><br><br><button onclick="">Увеличить +++</button>
+</div>
+<br><br>
+<div id="pos5">
+    <button onclick="">Уменьшить ---</button><br><br><button onclick="">Добавить в корзину</button><br><br><button onclick="">Увеличить +++</button>
+</div>
+<br><br>
+<div id="pos6">
+    <button onclick="">Уменьшить ---</button><br><br><button onclick="">Добавить в корзину</button><br><br><button onclick="">Увеличить +++</button>
+</div>
 
+
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div><!--onClick="AddBasketBtn(this);"-->
 
     <span data-id="1" data-price="1500.12" >009988<br><br>
