--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -19,17 +19,20 @@
         <div id="bflocation">
             <span class="location">  Мариуполь</span>
         </div>
+        <div id="bftimew">
+            Работаем с 10:00 до 22:00
+        </div>
+        <div id="bfmenu">
+            <a href="/">Доставка</a>
+            <a href="/">Контакты</a>
+        </div>
 
 
 
 
 
+        <div class="cl"></div>
     </div>
-
-
-    <svg class="icon" height="25" fill="rgb(197,5,0)">
-        <svg viewBox="0 0 18.4 23" id="location" xmlns="http://www.w3.org/2000/svg"><g data-name="Group 1467"><path data-name="Path 1156" d="M9.2 0A9.2 9.2 0 000 9.108c0 6.3 8.107 13.317 8.452 13.615a1.15 1.15 0 001.495 0c.4-.3 8.452-7.314 8.452-13.616A9.2 9.2 0 009.2 0zm0 20.3c-1.92-1.828-6.9-6.9-6.9-11.189a6.9 6.9 0 1113.8 0c0 4.252-4.98 9.358-6.9 11.189z"></path><path d="M9.2 4.6a4.025 4.025 0 104.025 4.025A4.025 4.025 0 009.2 4.6zm0 5.75a1.725 1.725 0 111.725-1.725A1.725 1.725 0 019.2 10.35z"></path></g></svg>
-    </svg>
 </div>
 
 
@@ -37,8 +40,11 @@
 
 
 
-fjdngvf jdjg it itjg рорллролор
-паа
+
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </body>
 </html>
