--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -17,26 +17,19 @@
 
 <div id="bh">
     <div class="maxw">
-        <div id="bhlocation">
-            <span class="location">  Мариуполь</span>
-        </div>
-        <div id="bhtimew">
-            Работаем с 10:00 до 22:00
-        </div>
+        <div id="bhlocation"><span class="location">  Мариуполь</span></div>
+        <div id="bhtimew">Работаем с 10:00 до 22:00</div>
         <div id="bhmenu">
-            <a href="/">Доставка</a>
-            <a href="/">Контакты</a>
+            <a href="/">Доставка</a><a href="/">Контакты</a>
         </div>
-
         <div id="bhtel">
-            <img class="svg" src="/img/site/phone-header.svg" alt="телефон">76 <br>98p
+            <a href="tel:+380975237787"> +38(096)123-45-67</a>
         </div>
-
-
         <div class="lng_btn">
-            <span id="lng_en_btn" class="lng_en" title="english" data-lng="en" onClick="lngBtn(this);"></span>
+            <!--<span id="lng_en_btn" class="lng_en" title="english" data-lng="en" onClick="lngBtn(this);"></span>-->
             <span id="lng_ru_btn" class="lng_ru" title="русский" data-lng="ru" onClick="lngBtn(this);"></span>
             <span id="lng_uk_btn" class="lng_uk" title="українська" data-lng="uk" onClick="lngBtn(this);"></span>
+            <div class="cl"></div>
             <script type="application/javascript">
                 function lngBtn(el){
                     document.cookie="lng="+el.dataset.lng+";domain=."+document.location.host;
@@ -45,6 +38,17 @@
             </script>
         </div>
         <div class="cl"></div>
+    </div>
+</div>
+
+<div id="headerback"></div>
+<div id="header">
+    <div class="maxw">
+
+
+        54
+
+
     </div>
 </div>
 
