--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/default.css">
     <link rel="stylesheet" type="text/css" href="/frame.css">
     <link rel="stylesheet" type="text/css" href="/lng.css">
+    <link rel="stylesheet" type="text/css" href="/common.css">
     <link rel="stylesheet" type="text/css" href="/css.css">
 
 
@@ -44,9 +45,13 @@
 <div id="headerback"></div>
 <div id="header">
     <div class="maxw">
+        <div id="logo">
+            54
+        </div>
+        <div id="burgermenu">
+            df
+        </div>
 
-
-        54
 
 
     </div>
